hiperdia dm insulina

--- a/templates/painel-hiperdia-dm.html
+++ b/templates/painel-hiperdia-dm.html
@@ -590,10 +590,10 @@
                                             <select id="diabetes-tipoInsulina"
                                                 class="w-full border border-gray-300 rounded py-2 px-3 focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent">
                                                 <option value="">Selecione o tipo de insulina</option>
-                                                <option value="NPH">Insulina NPH</option>
-                                                <option value="Regular">Insulina Regular</option>
-                                                <option value="Glargina">Insulina Glargina</option>
-                                                <option value="Lispro">Insulina Lispro</option>
+                                                <option value="Insulina NPH">Insulina NPH</option>
+                                                <option value="Insulina Regular">Insulina Regular</option>
+                                                <option value="Insulina Glargina">Insulina Glargina</option>
+                                                <option value="Insulina Lispro">Insulina Lispro</option>
                                             </select>
                                         </div>
 
