exibir sempre o botão editar insulina

--- a/templates/painel-hiperdia-dm.html
+++ b/templates/painel-hiperdia-dm.html
@@ -521,7 +521,7 @@
                                             <div class="text-xs text-gray-500">Ajustar dose ou frequência</div>
                                         </div>
                                     </button>
-                                    <button type="button" class="diabetes-treatment-action-tab flex items-center p-3 border rounded-lg text-left transition-colors duration-200 border-gray-200 bg-white hover:bg-gray-50 text-gray-600 hidden" data-action="modify-insulin">
+                                    <button type="button" class="diabetes-treatment-action-tab flex items-center p-3 border rounded-lg text-left transition-colors duration-200 border-gray-200 bg-white hover:bg-gray-50 text-gray-600" data-action="modify-insulin">
                                         <i class="ri-medicine-bottle-line text-xl mr-3 text-purple-500"></i>
                                         <div>
                                             <div class="font-medium">Editar Insulina</div>
