melhorias no modal e timeline - acoes hipertensão

--- a/templates/painel-hiperdia-has.html
+++ b/templates/painel-hiperdia-has.html
@@ -414,7 +414,7 @@
                     </button>
                                     <button type="button" class="action-type-tab flex items-center py-2 px-3 border rounded-lg text-left transition-colors duration-200" data-action-value="1">
                                         <i class="ri-file-add-line text-lg mr-2 text-blue-500"></i>
-                                        <span class="text-sm font-medium">Solicitar MRPA</span>
+                                        <span class="text-sm font-medium">Iniciar MRPA</span>
                                     </button>
                                     <button type="button" class="action-type-tab flex items-center py-2 px-3 border rounded-lg text-left transition-colors duration-200" data-action-value="2">
                                         <i class="ri-stethoscope-line text-lg mr-2 text-cyan-500"></i>
@@ -862,8 +862,7 @@
                         <button id="hiperdia-cancelRegisterBtn"
                             class="bg-gray-200 text-gray-800 py-2 px-4 rounded mr-2 !rounded-button whitespace-nowrap">Cancelar</button>
                         <button id="hiperdia-saveRegisterModalBtn"
-                            class="bg-primary text-white py-2 px-4 rounded !rounded-button whitespace-nowrap">Salvar
-                            registro</button>
+                            class="bg-primary text-white py-2 px-4 rounded !rounded-button whitespace-nowrap">Salvar Ação</button>
                     </div>
                 </div>
             </div>
