criando a interface de avaliar tratamento DM design legal

--- a/templates/Painel-Plafam.html
+++ b/templates/Painel-Plafam.html
@@ -491,6 +491,7 @@
                                         <label class="flex items-center"><input type="checkbox" name="acao" value="16" class="h-4 w-4 rounded border-gray-300 text-primary focus:ring-primary mr-2">Outra área</label>
                                         <label class="flex items-center"><input type="checkbox" name="acao" value="17" class="h-4 w-4 rounded border-gray-300 text-primary focus:ring-primary mr-2">Não reside na cidade</label>
                                         <label class="flex items-center"><input type="checkbox" name="acao" value="18" class="h-4 w-4 rounded border-gray-300 text-primary focus:ring-primary mr-2">Sem informações</label>
+                                        <label class="flex items-center"><input type="checkbox" name="acao" value="19" class="h-4 w-4 rounded border-gray-300 text-primary focus:ring-primary mr-2">Área indígena</label>
                                     </div>
                                 </div>
                                 <div>
