--- a/templates/painel-adolescentes.html
+++ b/templates/painel-adolescentes.html
@@ -769,6 +769,11 @@
                                     <span class="radio-mark"></span>
                                     Implante subdérmico
                                 </label>
+                                <label class="custom-radio">
+                                    <input type="radio" name="method-type" value="A decidir">
+                                    <span class="radio-mark"></span>
+                                    A decidir
+                                </label>
                             </div>
                         </div>
                         <div>
